src/objects/Sale__c.object
<CustomObject>
    <description>Represents a sale transaction from the warehouse</description>
    <fields>
        <fullName>Beans_Number_of_90kg_Bags_Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Beans Number of 90kg Bags Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beans_Price_Per_90kg_Bag__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Beans Price Per 90kg Bag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cow_Peas_Number_of_90kg_Bags_Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cow Peas Number of 90kg Bags Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cow_Peas_Price_Per_90kg_Bag__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cow Peas Price Per 90kg Bag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dolichos_Number_of_90kg_Bags_Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dolichos Number of 90kg Bags Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dolichos_Price_Per_90kg_Bag__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dolichos Price Per 90kg Bag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Green_Grams_Number_of_90kg_Bags_Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Green Grams Number of 90kg Bags Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Green_Grams_Price_Per_90kg_Bag__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Green Grams Price Per 90kg Bag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maize_Number_of_90kg_Bags_Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Maize Number of 90kg Bags Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maize_Price_Per_90kg_Bag__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Maize Price Per 90kg Bag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pigeon_Peas_Number_of_90kg_Bags_Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Pigeon Peas Number of 90kg Bags Sold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pigeon_Peas_Price_Per_90kg_Bag__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Pigeon Peas Price Per 90kg Bag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date the transaction was made</description>
        <label>Sale Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Payment Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>(Beans_Number_of_90kg_Bags_Sold__c *  Beans_Price_Per_90kg_Bag__c) +
 (Cow_Peas_Number_of_90kg_Bags_Sold__c  *  Cow_Peas_Price_Per_90kg_Bag__c ) +
 (Dolichos_Number_of_90kg_Bags_Sold__c *  Dolichos_Price_Per_90kg_Bag__c ) +
 (Green_Grams_Number_of_90kg_Bags_Sold__c *  Green_Grams_Price_Per_90kg_Bag__c) +
 (Maize_Number_of_90kg_Bags_Sold__c *  Maize_Price_Per_90kg_Bag__c ) +
 (Pigeon_Peas_Number_of_90kg_Bags_Sold__c *  Pigeon_Peas_Price_Per_90kg_Bag__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Sale</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Sale_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Sale Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>